Refactor by remove magic numbers and simplify code